[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/ButtonStyles/blue_style_unpressed.tres" type="StyleBox" id=1]
[ext_resource path="res://VirtualKeyboard.gd" type="Script" id=2]
[ext_resource path="res://button_group.tres" type="ButtonGroup" id=3]
[ext_resource path="res://Assets/space.png" type="Texture" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Assets/ButtonStyles/blue_style_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/ButtonStyles/green_style_unpressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/ButtonStyles/red_style_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Assets/ButtonStyles/red_style_unpressed.tres" type="StyleBox" id=9]
[ext_resource path="res://yellow_style_pressed.tres" type="StyleBox" id=10]
[ext_resource path="res://yellow_style_unpressed.tres" type="StyleBox" id=11]
[ext_resource path="res://Assets/ButtonStyles/green_style_pressed.tres" type="StyleBox" id=12]
[ext_resource path="res://Assets/ButtonStyles/blank_style.tres" type="StyleBox" id=13]

[node name="World" type="Node"]
script = ExtResource( 5 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 192.0
margin_top = -56.0
margin_right = 286.0
margin_bottom = -32.0
max_length = 5
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false

[node name="WordDisplay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="WordDisplay"]
margin_left = 112.0
margin_top = 32.0
margin_right = 368.0
margin_bottom = 340.0

[node name="HBoxContainer1" type="HBoxContainer" parent="WordDisplay/VBoxContainer"]
margin_right = 256.0
margin_bottom = 48.0

[node name="TextureRect1" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer1"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer1/TextureRect1"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer1"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer1/TextureRect2"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer1"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer1/TextureRect3"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect4" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer1"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer1/TextureRect4"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect5" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer1"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer1/TextureRect5"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="WordDisplay/VBoxContainer"]
margin_top = 52.0
margin_right = 256.0
margin_bottom = 100.0

[node name="TextureRect1" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer2"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer2/TextureRect1"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer2"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer2/TextureRect2"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer2"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer2/TextureRect3"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect4" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer2"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer2/TextureRect4"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect5" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer2"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer2/TextureRect5"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="WordDisplay/VBoxContainer"]
margin_top = 104.0
margin_right = 256.0
margin_bottom = 152.0

[node name="TextureRect1" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer3/TextureRect1"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer3"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer3/TextureRect2"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer3"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer3/TextureRect3"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect4" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer3"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer3/TextureRect4"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect5" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer3"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer3/TextureRect5"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="WordDisplay/VBoxContainer"]
margin_top = 156.0
margin_right = 256.0
margin_bottom = 204.0

[node name="TextureRect1" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer4"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer4/TextureRect1"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer4"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer4/TextureRect2"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer4"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer4/TextureRect3"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect4" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer4"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer4/TextureRect4"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect5" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer4"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer4/TextureRect5"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="WordDisplay/VBoxContainer"]
margin_top = 208.0
margin_right = 256.0
margin_bottom = 256.0

[node name="TextureRect1" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer5"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer5/TextureRect1"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer5"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer5/TextureRect2"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer5"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer5/TextureRect3"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect4" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer5"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer5/TextureRect4"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect5" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer5"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer5/TextureRect5"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="WordDisplay/VBoxContainer"]
margin_top = 260.0
margin_right = 256.0
margin_bottom = 308.0

[node name="TextureRect1" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer6"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer6/TextureRect1"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer6"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer6/TextureRect2"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer6"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer6/TextureRect3"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect4" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer6"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer6/TextureRect4"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="TextureRect5" type="TextureRect" parent="WordDisplay/VBoxContainer/HBoxContainer6"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="WordDisplay/VBoxContainer/HBoxContainer6/TextureRect5"]
margin_right = 48.0
margin_bottom = 48.0
align = 1
valign = 1

[node name="VirtualKeyboard" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
group = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VirtualKeyboard"]
margin_left = 24.0
margin_top = 480.0
margin_right = 460.0
margin_bottom = 638.0

[node name="HBoxContainer1" type="HBoxContainer" parent="VirtualKeyboard/VBoxContainer"]
margin_right = 436.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
alignment = 1

[node name="Button1" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_right = 40.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 13 )
custom_styles/normal = ExtResource( 1 )
group = ExtResource( 3 )
text = "Q"

[node name="Button2" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 13 )
custom_styles/normal = ExtResource( 7 )
group = ExtResource( 3 )
text = "W"

[node name="Button3" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 13 )
custom_styles/normal = ExtResource( 9 )
group = ExtResource( 3 )
text = "E"

[node name="Button4" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 13 )
custom_styles/normal = ExtResource( 11 )
group = ExtResource( 3 )
text = "R"

[node name="Button5" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 176.0
margin_right = 216.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "T"

[node name="Button6" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 220.0
margin_right = 260.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "Y"

[node name="Button7" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 264.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "U"

[node name="Button8" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 308.0
margin_right = 348.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "I"

[node name="Button9" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 352.0
margin_right = 392.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "O"

[node name="Button10" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer1"]
margin_left = 396.0
margin_right = 436.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "P"

[node name="HBoxContainer2" type="HBoxContainer" parent="VirtualKeyboard/VBoxContainer"]
margin_top = 54.0
margin_right = 436.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
alignment = 1

[node name="Button1" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 22.0
margin_right = 62.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "A"

[node name="Button2" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 106.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "S"

[node name="Button3" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 110.0
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "D"

[node name="Button4" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 194.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "F"

[node name="Button5" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 198.0
margin_right = 238.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "G"

[node name="Button6" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 242.0
margin_right = 282.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "H"

[node name="Button7" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 286.0
margin_right = 326.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "J"

[node name="Button8" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 330.0
margin_right = 370.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "K"

[node name="Button9" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer2"]
margin_left = 374.0
margin_right = 414.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "L"

[node name="HBoxContainer3" type="HBoxContainer" parent="VirtualKeyboard/VBoxContainer"]
margin_top = 108.0
margin_right = 436.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
alignment = 1

[node name="Button1" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 2.0
margin_right = 62.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 0 )
group = ExtResource( 3 )
text = "ENTER"

[node name="Button2" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 66.0
margin_right = 106.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "Z"

[node name="Button3" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 110.0
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "X"

[node name="Button4" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 154.0
margin_right = 194.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "C"

[node name="Button5" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 198.0
margin_right = 238.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "V"

[node name="Button6" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 242.0
margin_right = 282.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "B"

[node name="Button7" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 286.0
margin_right = 326.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "N"

[node name="Button8" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 330.0
margin_right = 370.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )
group = ExtResource( 3 )
text = "M"

[node name="Button9" type="Button" parent="VirtualKeyboard/VBoxContainer/HBoxContainer3"]
margin_left = 374.0
margin_right = 434.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 0 )
group = ExtResource( 3 )
text = "BACK"

[connection signal="text_updated" from="VirtualKeyboard" to="." method="_on_VirtualKeyboard_text_updated"]
[connection signal="word_submitted" from="VirtualKeyboard" to="." method="_on_VirtualKeyboard_word_submitted"]
